--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,20 @@
 {
-    "name": "laravel/laravel",
+    "name": "publikando/Central",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Sistema online de gerenciamento de usuarios/clientes/tarefas entre outros - Central .",
     "keywords": [
         "framework",
-        "laravel"
+        "laravel",
+        "Central"
     ],
-    "license": "MIT",
+    "license": "Apache license 2.0",
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "monolog/monolog": "^2.0",
+        "pagseguro/pagseguro-php-sdk": "^6.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
