--- a/.env server
+++ b/.env server
@@ -2,7 +2,7 @@ APP_NAME=Central
 APP_ENV=production
 APP_KEY=base64:HPj5bTeNf9Ywm46VExNAudbcOaPQ2vddyZYB4SKyAOg=
 APP_DEBUG=false
-APP_URL=http://central.agenciapublikando.com.br/
+APP_URL=https://central.agenciapublikando.com.br/
 
 LOG_CHANNEL=stack
 
@@ -31,13 +31,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=mail.agenciapublikando.com.br
+MAIL_PORT=587
+MAIL_USERNAME=contato@agenciapublikando.com.br
+MAIL_PASSWORD=publik@ndo.2020
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=contato@agenciapublikando.com.br
+MAIL_FROM_NAME=Publikando
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
