--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "nesbot/carbon": "^2.36",
+        "wildbit/swiftmailer-postmark": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
