--- a/composer.json
+++ b/composer.json
@@ -38,14 +38,20 @@
             "App\\": "app/"
         },
         "classmap": [
+            "database",
             "database/seeds",
             "database/factories"
         ]
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
-        }
+            "App\\": "app/"
+        },
+        "classmap": [
+            "database",
+            "database/seeds",
+            "database/factories"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
